--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "firebase-admin": "^13.0.1",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.0",
+    "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "type-graphql": "^2.0.0-rc.2",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.17"
   }
 }
