--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.1",
+    "form-data": "^4.0.1",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.0",
+    "mailgun.js": "^11.1.0",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
