--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/graphql-upload": "^17.0.0",
     "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase-admin": "^13.0.1",
     "form-data": "^4.0.1",
     "graphql": "^16.10.0",
@@ -25,6 +28,7 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.17"
+    "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0"
   }
 }
