--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "mailgun.js": "^11.1.0",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.2",
+    "require-all": "^3.0.0",
     "ts-node-dev": "^2.0.0",
     "type-graphql": "^2.0.0-rc.2",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.17",
+    "@types/require-all": "^3.0.6",
     "@types/uuid": "^10.0.0"
   }
 }
