--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.1",
     "form-data": "^4.0.1",
+    "googleapis": "^146.0.0",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.0",
     "mailgun.js": "^11.1.0",
