Prepare API for secure production deployment 	modified:   .gitignore 	modified:   package.json 	modified:   src/config/firebase.ts 	modified:   src/config/mailer.ts 	modified:   src/dtos/inputs/UpdateUserProfileImage.ts 	modified:   src/index.ts 	new file:   src/middleware/AuthFirebase.ts 	modified:   src/resolvers/AddNewScheduleResolver.ts 	modified:   src/resolvers/AddNewUserResolver.ts 	modified:   src/resolvers/AuthResolver.ts 	modified:   src/resolvers/GetOfficesResolver.ts 	modified:   src/resolvers/GetUserProfilePictureResolver.ts 	modified:   src/resolvers/GetUserResolver.ts 	modified:   src/resolvers/GetUsersByRoleResolver.ts 	modified:   src/resolvers/ResetPasswordResolver.ts 	new file:   src/resolvers/Test.ts 	modified:   src/resolvers/UpdateUserProfileImageResolver.ts 	new file:   src/types/MyContext.ts 	new file:   src/utils/loadResolvers.ts 	modified:   tsconfig.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-# Modules
-node_modules
+# Node modules
+node_modules/
 package-lock.json
 
-# Enviroment
+# Output build
+dist/
+
+# Environment variables
 .env
-.gitignore
+
+# Zipped files
 *.zip
 
-#KEY
+# Firebase config keys
 src/config/*.json
