--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.0.1",
+    "firebase-functions": "^6.3.2",
     "form-data": "^4.0.1",
     "googleapis": "^146.0.0",
     "graphql": "^16.10.0",
@@ -26,7 +27,8 @@
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "type-graphql": "^2.0.0-rc.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/graphql-upload": "^17.0.0",
