--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-scalars": "^1.24.0",
     "graphql-upload": "^11.0.0",
     "mailgun.js": "^11.1.0",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
